--- a/src/views/partials/_popup.hbs
+++ b/src/views/partials/_popup.hbs
@@ -3,25 +3,33 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Conecte-se com o Qr code</h5>
+          <h5 class="modal-title">{{status}}</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="container">
-          <div class="card">
-            <div class="car-body">
-              <div class="row col-12">
-                <div class="form-group col-12 ml-3">
-                <div id="divQr" class="modal-body ml-5">
-                  <img id="qrCode" src="/images/qrCode.png" class="" alt="Qr code">
-                </div>
+
+        <div id="QrCode">
+          <div class="container mt-4">
+            <div class="card">
+              <div class="car-body">
+                <div class="row col-12">
+                  <div class="form-group col-12 ml-3">
+                    <div id="divQr" class="modal-body ml-5">
+                      <img id="qrCode" src="/images/qrCode.png" class="" alt="Qr code">
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+
+
         <div class="modal-footer">
+          <form action="/deleteSession" method="post">
+            <button class="btn btn-danger">Deletetar Sessão</button>
+          </form>
           <a href="/qrcode"><button class="btn btn-dark">Abrir Qr Code</button></a>
           <button type="button" class="btn btn-primary" data-dismiss="modal">Sair</button>
         </div>
