pesquisas por status pedidos

--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -44,7 +44,8 @@
     </div>
 
     <div class="container col-12">
-        <a href="#">
+
+        <a href="/pedidos">
             <div class="col-sm-6 col-lg-2 ">
                 <div class="card text-white bg-flat-color-5">
                     <div class="card-body pb-0 text-center">
@@ -53,7 +54,7 @@
                         </h4>
                         <p class="text-light">Pedidos</p>
                         <div class="chart-wrapper px-0" style="height:20px;" height="20">
-                            <canvas id="widgetChart1"></canvas>
+
                         </div>
 
                     </div>
@@ -61,7 +62,8 @@
             </div>
         </a>
         <!--/.col-->
-        <a href="#">
+
+        <a href="/pedidos/preparo">
             <div class="col-sm-6 col-lg-2">
                 <div class="card text-white bg-flat-color-1">
                     <div class="card-body pb-0 text-center">
@@ -79,7 +81,7 @@
             </div>
         </a>
         <!--/.col-->
-        <a href="#">
+        <a href="/pedidos/entregues">
             <div class="col-sm-6 col-lg-2">
                 <div class="card text-white bg-flat-color-3">
                     <div class="card-body pb-0 text-center">
@@ -97,7 +99,7 @@
             </div>
         </a>
         <!--/.col-->
-        <a href="#">
+        <a href="/pedidos/cancelados">
             <div class="col-sm-6 col-lg-2 ">
                 <div class="card text-white bg-flat-color-4">
                     <div class="card-body pb-0 text-center">
@@ -108,6 +110,7 @@
 
                         <div class="chart-wrapper px-3" style="height:20px;" height="20">
                             <canvas id="widgetChart4"></canvas>
+                            <i class="fa fa-search"></i>
                         </div>
 
                     </div>
@@ -119,9 +122,10 @@
                 <div class="card text-white bg-flat-color-2">
                     <div class="card-body pb-0 text-center">
                         <h4 class="mb-0">
-                            <span class="count" id="imprimir">Anotações</span>
+                            <span class="count" id="imprimir">Anotações - Faça Seu Check List</span>
                         </h4>
-                        <p class="text-light">Faça Seu Check List
+                        <p class="text-light"></p>
+                        <small>Em breve Disponivel</small>
                         <div class="chart-wrapper px-3" style="height:20px;" height="20">
                             <canvas id="widgetChart4"></canvas>
                         </div>
