--- a/src/views/pedidos/Entregues.hbs
+++ b/src/views/pedidos/Entregues.hbs
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="card">
         <div class="card-body">
-            <form action="/pedidos" method="post">
+            <form action="/pedidos/entregues" method="post">
                 <div class="row">
                     <div class="col-6">
                         <label for="">Escolha a data(Referência por Data)</label>
