--- a/src/views/pedidos/selecioneEntregues.hbs
+++ b/src/views/pedidos/selecioneEntregues.hbs
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="card">
         <div class="card-body">
-            <form action="/pedidos" method="post">
+            <form action="/pedidos/entregues" method="post">
                 <label for="">Escolha a data(Referência por Data)</label>
                <input type="date" name="date" class="form-control">
                 <div class="row">
