--- a/src/views/partials/_popup.hbs
+++ b/src/views/partials/_popup.hbs
@@ -28,7 +28,7 @@
 
         <div class="modal-footer">
           <form action="/deleteSession" method="post">
-            <button class="btn btn-danger">Deletetar Sessão</button>
+            <button class="btn btn-danger">Deletar Sessão</button>
           </form>
           <a href="/qrcode"><button class="btn btn-dark">Abrir Qr Code</button></a>
           <button type="button" class="btn btn-primary" data-dismiss="modal">Sair</button>
