--- a/src/views/login/login.hbs
+++ b/src/views/login/login.hbs
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="login-content">
                 <div class="login-logo">
-                    <a href="index.html">
+                    <a href="#">
                         <img class="align-content" src="/images/logo.png" alt="Logotipo">
                     </a>
                 </div>
