--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -303,12 +303,13 @@
         </div>
     </div>
 
-    <div class="col-xl-3 col-lg-6">
+   {{!-- <div class="col-xl-3 col-lg-6">
         <div class="card">
             <div class="card-body">
                 <div class="stat-widget-one">
                     <div class="stat-icon dib"><i class="ti-user text-primary border-primary"></i></div>
                     <div class="stat-content dib">
+     Fim do each  
                         <div class="stat-text">Em Atendimento</div>
                         <div class="stat-digit" id="EmAtendimento">{{emAtendimento}}</div>
                     </div>
@@ -316,7 +317,7 @@
             </div>
         </div>
     </div>
-
+--}}
     <div class="col-xl-3 col-lg-6">
         <div class="card">
             <div class="card-body">
