--- a/src/views/login/login.hbs
+++ b/src/views/login/login.hbs
@@ -11,24 +11,24 @@
                     {{>_msg}}
                     <form>
                         <div class="form-group">
-                            <label>Email address</label>
-                            <input type="email" class="form-control"  name="email" placeholder="Email">
+                            <label>Email</label>
+                            <input type="email" class="form-control"  name="email" placeholder="DIGITE SEU EMAIL">
                         </div>
                         <div class="form-group">
-                            <label>Password</label>
-                            <input type="password" class="form-control" name="password" placeholder="Password" >
+                            <label>Senha</label>
+                            <input type="password" class="form-control" name="password" placeholder="DIGITE SUA SENHA" >
                             {{!-- value="secret(!@#)" --}}
                         </div>
                         <div class="checkbox">
-                            <label>
+                           {{!--  <label>
                                 <input type="checkbox"> Remember Me
-                            </label>
+                            </label>--}}
                             <label class="pull-right">
                                 <a href="/redefinirSenha">Esqueceu a Senha?</a>
                             </label>
 
                         </div>
-                        <button type="submit" class="btn btn-success btn-flat m-b-30 m-t-30">Sign in</button>
+                        <button type="submit" class="btn btn-success btn-flat m-b-30 m-t-30">ENTRAR</button>
                         <div class="register-link m-t-15 text-center mt-5">
                             <p>Sua outra lanchonete ainda não possui uma conta? <a href="/register"> Crie uma conta agora e ganhe até 10% em desconto</a></p>
                         </div>
